# election-monitor

./: LICENSE  README.md  main.py  pyproject.toml
agents/: InterfaceAgent.py  process_agent.py
dashboard/: bun.lockb  package.json
dashboard/src/: socket.ts
dashboard/src/app/: layout.tsx  page.tsx  socket-client.tsx
dashboard/src/components/: icons.tsx  main-nav.tsx  site-header.tsx  tailwind-indicator.tsx  theme-toggle.tsx
dashboard/src/components/parts/: side-panel.tsx
dashboard/src/components/parts/chat/: chat-messages.tsx  chat-ui.tsx  index.tsx
dashboard/src/context/data/: chat-model.ts
dashboard/src/context/providers/: chat-store-provider.tsx  counter-store-provider.tsx
dashboard/src/context/stores/: chat-store.ts  counter-store.ts
data/: message.py  user_details.py
